--- a/style.css
+++ b/style.css
@@ -1,23 +1,48 @@
+:root {
+    --input: rgb(230, 228, 228);
+    --background: rgb(212, 212, 212);
+    --shadow: rgb(223, 223, 223);
+    --border-radius: 10px;
+    --font-family: Verdana, Geneva, Tahoma, sans-serif;
+}
+h1,h2,p,label {
+    font-family: var(--font-family);
+}
 h1 {
-    color: white;
+    color: rgb(27, 27, 27);
     /* margin: auto; */
-    border-bottom: 5px outset red;
-    border-right: 4px outset red;
-    text-shadow: rgb(255, 0, 0) 1px 0 2px;
+    border-bottom: 4px outset var(--shadow);
+    border-right: 4px outset var(--shadow);
+    text-shadow: var(--shadow) 1px 0 2px;
     text-align:center;
+    border-radius: 10px;
+    box-shadow: 10px;
+    font-size: 50px;
+    padding: 10px;
+    
+}
+h2 {
+    border-bottom: 4px outset var(--shadow);
+    padding-bottom: 10px;
+    /* border-bottom-right-radius: 10px; */
 }
 p,
+label {
+    /* color: white; */
+    font-size: 20px;
+}
 label {
     color: white;
 }
 .header {
-    background-color:black;
+    background-color:var(--input);
+    border-radius: 10px;
 }
-body { background-color: rgb(31, 31, 31);}
+body { background-color: var(--background);}
 .options {
     /* width: 100%; */
     display: flex;
-    border-bottom:3px outset red;
+    border-bottom:3px outset var(--shadow);
     margin-bottom: 10px;
     justify-content: center;
     align-items: center;
@@ -25,35 +50,49 @@ body { background-color: rgb(31, 31, 31);}
     /* gap: 10px; */
     /* border: 1px solid black; */
 }
-.input {
-    background-color:black;
+.setup-box {
+    width: 30%;
+    height: 350px;
+    background-color:var(--input);
     text-align:center;
-}
-.palette_selection {
-    width: 200px;
+    border-radius: var(--border-radius);
+    margin: 20px;
+    /* padding: 5px; */
+    border-bottom: 4px outset var(--shadow);
+    border-right: 4px outset var(--shadow);
     display: flex;
     flex-direction: column;
-    margin: 5px;
-    padding: 5px;
-    text-align:center;
-    background-color:black;
+    align-items: center;
 }
-.pre-processing {
-    margin: 5px;
-    padding: 5px;
-    background-color:black;
+/* .input {
+    width: 30%;
+    height: 350px;
+    background-color:var(--input);
+    text-align:center;
+    border-radius: var(--border-radius);
+} */
+.palette_selection {
+    border-radius: var(--border-radius);
+    background-color:var(--input);
+    width: 30%;
+    display: flex;
+    flex-direction: column;
 }
 .board_settings {
-    width: 200px;
     display: flex;
     flex-direction: column;
-    width: 50%;
 }
 
 #display_image {
     width: 300px;
     height: 169px;
-    border: 1px solid black;
+    border: 1px solid var(--input);
     background-position: center;
     background-size: cover;
+}
+button,
+input {
+    /* width: 150px;
+    height: 50px; */
+    font-size: 20px;
 }
